# FiberSim_ML

./: .gitignore  Agents.md  README.md  load_modules.sh  parameter_values.xlsx  pyproject.toml  readdata.py  timeseries_model_cpu.pt  timeseries_model_n_var3_cpu.pt  train_afterload_lstm.py  train_from_readdata.py  train_from_readdata_n_var3.py
data/: parameter_values.xlsx
data2/: summary_n_vars_1_part_10_metadata.txt  summary_n_vars_1_part_1_metadata.txt  summary_n_vars_1_part_2_metadata.txt  summary_n_vars_1_part_3_metadata.txt  summary_n_vars_1_part_4_metadata.txt  summary_n_vars_1_part_5_metadata.txt  summary_n_vars_1_part_6_metadata.txt  summary_n_vars_1_part_7_metadata.txt  summary_n_vars_1_part_8_metadata.txt  summary_n_vars_1_part_9_metadata.txt
data_n_var3/: summary_n_vars_3_part_1_metadata.txt  summary_n_vars_3_part_2_metadata.txt  summary_n_vars_3_part_3_metadata.txt  summary_n_vars_3_part_4_metadata.txt  summary_n_vars_3_part_5_metadata.txt
