[project]
name = "FiberSim_ML"
version = "0.1.0"
description = "ML of FiberSim."
readme = "README.md"
requires-python = ">=3.10"
# These are your project dependencies
dependencies = [
    "scipy>=1.10.0",
    "numpy<2.0.0", # Note: some geometry libs aren't ready for Numpy 2.0 yet
    "pandas",
    "matplotlib",
    "torch",
    "openpyxl>=3.1.5",
    "scikit-learn>=1.7.2",
]

# Define PyTorch CUDA index
[[tool.uv.index]]
name = "pytorch-cu118"  # adjust version as needed
url = "https://download.pytorch.org/whl/cu118"
explicit = true
# Source torch from CUDA index
[tool.uv.sources]
torch = { index = "pytorch-cu118" }


